# qelox

./: .gitignore  QELOX_Architecture_Report.md  README.md  Untitled-1.mmd  config.toml  config.toml.example  go.mod  go.sum  go.sum.bak  install.sh  test_p2p.go  uninstall.sh
cmd/scratch/: main.go
deploy/: qeloxd.service
internal/client/: client.go
internal/config/: config.go  config_test.go
internal/daemon/: daemon.go
internal/explorer/: explorer.go
internal/log/: logger.go
internal/monitor/: monitor.go
internal/node/: controller.go
internal/socket/: server.go
internal/tui/: tui.go
internal/web/: server.go
internal/web/static/: app.js  index.html  report.html  style.css
qelox-gui/: .gitignore  index.html  package-lock.json  package.json  vite.config.d.ts.map  vite.config.js  vite.config.js.map  vite.config.ts
qelox-gui/src/: App.css  App.d.ts.map  App.tsx  index.css  main.tsx  store.ts
qelox-gui/src-tauri/: Cargo.toml  tauri.conf.json
qelox-gui/src-tauri/src/: main.rs
qelox-gui/src-tauri/src/commands/: hardware.rs  installer.rs  mod.rs  setup.rs
qelox-gui/src/components/: Header.tsx  MetricCard.tsx  Sidebar.tsx  Terminal.tsx  UpdaterBanner.tsx
qelox-gui/src/components/Explorer/: ExplorerLayout.tsx
qelox-gui/src/components/pages/: AlertsPage.tsx  ClustersPage.tsx  InstallerPage.tsx  LogsPage.tsx  NodesPage.tsx  SettingsPage.tsx  SetupWizardPage.tsx
qelox-gui/src/hooks/: useUpdater.ts
