[package]
name = "qelox-gui"
version = "1.1.0"
description = "QELO-X Desktop GUI"
authors = ["GeniusDev Tech"]
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = [] }
tauri-plugin-updater = "2.0.0"
sysinfo = "0.30"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

[features]
# default enables all standard tauri features
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

